[gd_scene load_steps=3 format=3 uid="uid://xrjtth0d2nc5"]

[ext_resource type="Script" uid="uid://ciokiqoyaox13" path="res://NodeVars.gd" id="1_6eeca"]
[ext_resource type="Script" uid="uid://bxlldk7s267hd" path="res://Node1.gd" id="2_bl41t"]

[node name="NodeVars" type="Node2D"]
script = ExtResource("1_6eeca")

[node name="node1" type="Node" parent="."]
script = ExtResource("2_bl41t")

[node name="node2" type="Node" parent="."]

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "NodeVars"
